wyseplus-drone/api/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wyseplus-admin-ingress
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
#    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - wyseplus-admin.wysemeet.cf
    secretName: wyseplus-tls
  rules:
  - host: wyseplus-admin.wysemeet.cf
    http:
      paths:
      - path: /
        backend:
          serviceName: wyseplus-admin
          servicePort: 80
